docs(deploy): panel startup must be plain java, not sh -c (EULA-loop root cause)
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>